Fixed layout issues with medium and featured shortcode when placed on 3 column layout

--- a/css/front-style.css
+++ b/css/front-style.css
@@ -421,8 +421,8 @@ ul.checkbox_list input {
 	max-width:335px;
 	width:100%;
 }
-.medium h1 { font-size:30px; margin-top:0; -webkit-font-smoothing:antialiased; }
-.medium h1 a { color:#ffffff !important; text-shadow: 1px 4px 10px rgba(0, 0, 0, 1); }
+.medium h1, .medium h2 { font-size:30px; margin-top:0; -webkit-font-smoothing:antialiased; }
+.medium h1 a, .medium h2 a { color:#ffffff !important; text-shadow: 1px 4px 10px rgba(0, 0, 0, 1); }
 .medium a:focus { outline-width:2px; }
 .medium p { text-shadow: 1px 4px 10px rgba(0, 0, 0, 1); }
 .medium-background {
@@ -522,10 +522,11 @@ ul.checkbox_list input {
 .oet_acf_homepage_3column_layout.ovlp {margin-left: -32px !important; margin-right: -32px !important;}
 
 /*--------TRENDING NOW--------*/
-.oet_3column_wrapper div {font-family: 'WorkSans-Regular'; box-sizing: border-box;}
+/*.oet_3column_wrapper div {font-family: 'WorkSans-Regular'; box-sizing: border-box;}*/
 .oet-trending-image, .oet-trending-title, .oet-trending-description, .oet-trending-button {margin: 10px 0px;}
-.oet_trendingnow_layout div, .oet_trendingnow_layout img {display:block; float:left; width:100%;}
-.oet_trendingnow_layout img {width:100%; height: 250px;}
+/*.oet_trendingnow_layout div, .oet_trendingnow_layout img {display:block; float:left; width:100%;}
+.oet_trendingnow_layout img {width:100%; height: 250px;}*/
+.adminoverridewidth {width:100%;}
 .oet-trending-section-title {font-size:28px; color:#E57200; text-align:center;padding:10px 0px; margin:30px 0px; font-family:'WorkSans-SemiBold' !important;}
 .oet-trending-description {min-height: 105px; overflow: hidden;}
 @media (max-width: 1200px){
@@ -533,15 +534,15 @@ ul.checkbox_list input {
 }
 .oet-trending-title {font-size: 24px; font-family: 'WorkSans-SemiBold' !important; color: #E57200 !important; line-height: 24px;}
 .oet-trending-title i {color: #222;}
-.oet_trendingnow_layout a {display: block; float: left; color:#ffffff; background-color:#E57200; padding:10px 15px;
+/*.oet_trendingnow_layout a {display: block; float: left; color:#ffffff; background-color:#E57200; padding:10px 15px;*/
 -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;}
-.oet_trendingnow_layout a:hover {color: #ffffff !important; text-decoration: none; opacity: .9;}
-.oet_trendingnow_layout .pad {padding-left:20px; padding-right:20px;}
+/*.oet_trendingnow_layout a:hover {color: #ffffff !important; text-decoration: none; opacity: .9;}
+.oet_trendingnow_layout .pad {padding-left:20px; padding-right:20px;}*/
 .oet_3column_wrapper .ovlp {margin-left: -50px !important; margin-right: -50px !important;}
 @media (max-width: 991px){
 	.oet-trending-description {min-height: 0px !important; max-height: none !important;}
-	.oet_trendingnow_layout img {width:100%; height: auto !important;}
-	.oet_trendingnow_layout .pad {padding-left:0px !important; padding-right:0px !important;}
+	/*.oet_trendingnow_layout img {width:100%; height: auto !important;}
+	.oet_trendingnow_layout .pad {padding-left:0px !important; padding-right:0px !important;}*/
 	.oet_3column_wrapper .ovlp {margin-left: 0px !important; margin-right: 0px !important;}
 }
 /*--------TILELINKS--------*/
